# softwareEngineer_JoelleJouni_RitaMarinaSaker

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  app.py  bert.py  channel_data_UCEgJCCqAuurk-tSvrIUs-pg.json  channel_data_UCGtu9J8Hp5lOOdNR4_nZa2Q.json  channel_data_UCIPPMRA040LQr5QPyJEbmXA.json  channel_data_test_channel_id.json  cleaning.py  docker-compose.yml  note.txt  pyproject.toml  relevant_channels.json  requirements.txt  src - Shortcut (2).lnk  src - Shortcut.lnk  tf_idf.py  topic_modeling.py  try.py  visualization_channel.py  youtube_api.py  youtube_api_2.py
.github/workflows/: ci-cd.yml  python-tests.yml
certs/: certificate.crt  openssl.cnf  private.key  request.csr
channel_analysis_models/: model.pkl  sentiment-analysis-on-twitter-data.ipynb  tfidf_vectorizer.pkl
configs/: prometheus.yml  prometheus_docker.yml  prometheus_local.yml
mlruns/0/: meta.yaml
mlruns/531165767181131128/: meta.yaml
mlruns/531165767181131128/1c73be4eef974ba3932d4717798aa67e/: meta.yaml
mlruns/531165767181131128/1f0c42d8bb5a413d867a419b60b4ce40/: meta.yaml
mlruns/531165767181131128/26aa1758bc464db0adf15399cdf936c2/: meta.yaml
mlruns/531165767181131128/29b91fa1163548ee9521cf5ebef94c4e/: meta.yaml
mlruns/531165767181131128/5317cb00e88e445cbc88d9b4091c427c/: meta.yaml
mlruns/531165767181131128/53db8f574d90436aa96f85d82c3323a8/: meta.yaml
mlruns/531165767181131128/55b1d6db9c164a9880c431a048e82693/: meta.yaml
prometheus-3.0.1.windows-amd64/: .gitignore
src/api/: youtube_api.py  youtube_api_2.py
src/data/: cleaning.py
src/model/: topic_modeling.py
src/nlp/: bert.py  tf_idf.py
src/visualization/: visualization_channel.py
templates/: dashboard.html  index.html  search_results.html
tests/: test_api_calls.py  test_bert.py  test_data_preprocessing.py  test_tfidf.py  test_topic_modeling.py  test_youtube_api.py
(+86 files in other folders)
