[tool.poetry]
name = "youtube-channel-recommender"
version = "0.1.0"
description = "channel recommender for successful collaboration"
authors = ["joelleeej <joelle.jouni@hotmail.com>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.21.1"
google-auth = "^2.36.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.154.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
torch = "^2.5.1"
transformers = "^4.47.0"
wordcloud = "^1.9.4"
langdetect = "^1.0.9"
joblib = "^1.4.2"
requests = "^2.32.3"
plotly = "^5.24.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mlflow = "^2.18.0"
omegaconf = "^2.3.0"
pydantic = "^2.10.3"
ruff = "^0.8.2"
mypy = "^1.13.0"
loguru = "^0.7.3"
pyinvoke = "^1.0.4"
pdoc = "^15.0.0"
flake8 = "^7.1.1"
black = "^24.10.0"
fastapi = "^0.115.6"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
uvicorn = "^0.32.1"
gunicorn = "^23.0.0"
notebook = "^7.3.1"
ipywidgets = "^8.1.5"
flask = "^2.3.3"
dash = "^2.18.2"
pyyaml = "^6.0.2"
pandas-stubs = "^2.2.3.241126"
types-requests = "^2.32.0.20241016"
types-python-dateutil = "^2.9.0.20241206"
types-pyyaml = "^6.0.12.20240917"
prometheus-flask-exporter = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
ruff = "^0.8.2"
flake8 = "^7.1.1"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
transformers = "^4.47.0"
matplotlib = "^3.9.3"
wordcloud = "^1.9.4"
flake8 = "^7.1.1"
black = "^24.10.0"
ruff = "^0.8.2"
torch = "^2.5.1"
seaborn = "^0.13.0"


